增加了按钮相关变量

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -42,8 +42,8 @@
 @font-family-base: @font-family-sans-serif;
 
 @font-size-base: 1rem;
-@font-size-large: 1.25rem;
-@font-size-small: .875rem;
+@font-size-lg: 1.25rem;
+@font-size-sm: .875rem;
 
 @font-weight-semi-light: 200;
 @font-weight-light: 300;
@@ -53,8 +53,8 @@
 @font-weight-base: @font-weight-normal;
 
 @line-height-base: 1.5;
-@line-height-large: 1.75;
-@line-height-small: 1.25;
+@line-height-sm: 1.25;
+@line-height-lg: 1.75;
 
 
 @h1-font-size: @font-size-base * 2.5;
@@ -74,3 +74,14 @@
 @body-bg: @white;
 @body-color: @gray-900;
 @body-text-align: null;
+
+// button
+@btn-font-weight: 400;
+@btn-padding-y: .25rem;
+@btn-padding-x: .75rem;
+@btn-font-size: @font-size-base;
+@btn-font-family: @font-family-base;
+@btn-line-height: @line-height-base;
+
+// button-sm button-lg
+@btn-font-size-sm: @font-size-sm;
