--- a/src/App.less
+++ b/src/App.less
@@ -1,2 +1,9 @@
 @import './style/index.less';
 
+.app {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
