--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -1,3 +1,34 @@
 .btn {
-  // background-color: @success;
+  font-size: @btn-font-size;
+  background-color: @body-bg;
+  color: @body-color;
+  padding: @btn-padding-y @btn-padding-x;
+  border: .12rem solid @gray-300;
+  margin: 10px;
+  cursor: pointer;
+  box-shadow: 8px 8px 20px 0 rgb(55 99 170 / 10%), -8px -8px 20px 0 #fff, inset 0 4px 20px 0 hsl(0deg 0% 100% / 50%);
+}
+
+.btn:hover, .btn:focus, .btn:active {
+  color: @primary;
+  border-color: @primary;
+}
+
+.btn-primary {
+  background-color: @primary;
+  border-color: @primary;
+  color: @gray-50;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+  color: @gray-50;
+  background-color: @blue;
+  border-color: @blue;
+}
+
+.btn-link {
+  border: none;
+  box-shadow: none;
+  color: @link;
+  text-decoration: none;
 }
