--- a/src/style/var.less
+++ b/src/style/var.less
@@ -40,18 +40,18 @@
 
 @font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 @font-family-base: @font-family-sans-serif;
-
+// font-size
 @font-size-base: 1rem;
 @font-size-lg: 1.25rem;
 @font-size-sm: .875rem;
-
+// font-weight
 @font-weight-semi-light: 200;
 @font-weight-light: 300;
 @font-weight-normal: 400;
 @font-weight-semi-bold: 600;
 @font-weight-bold: 700;
 @font-weight-base: @font-weight-normal;
-
+// line-height
 @line-height-base: 1.5;
 @line-height-sm: 1.25;
 @line-height-lg: 1.75;
@@ -77,7 +77,7 @@
 
 // button
 @btn-font-weight: 400;
-@btn-padding-y: .25rem;
+@btn-padding-y: .35rem;
 @btn-padding-x: .75rem;
 @btn-font-size: @font-size-base;
 @btn-font-family: @font-family-base;
@@ -85,3 +85,5 @@
 
 // button-sm button-lg
 @btn-font-size-sm: @font-size-sm;
+@btn-font-size-lg: @font-size-lg;
+
