--- a/src/style/var.less
+++ b/src/style/var.less
@@ -54,7 +54,7 @@
 // line-height
 @line-height-base: 1.5;
 @line-height-sm: 1.25;
-@line-height-lg: 1.75;
+@line-height-lg: 1.625;
 
 
 @h1-font-size: @font-size-base * 2.5;
@@ -83,7 +83,13 @@
 @btn-font-family: @font-family-base;
 @btn-line-height: @line-height-base;
 
-// button-sm button-lg
+// button-sm
 @btn-font-size-sm: @font-size-sm;
+@btn-line-height-sm: @line-height-sm;
+@btn-padding-x-sm: .5rem;
+@btn-padding-y-sm: .25rem;
+// button-lg
+@btn-padding-x-lg: 1rem;
+@btn-padding-y-lg: .625rem;
 @btn-font-size-lg: @font-size-lg;
-
+@btn-line-height-lg: @line-height-base;
