--- a/src/style/var.less
+++ b/src/style/var.less
@@ -79,17 +79,21 @@
 @btn-font-weight: 400;
 @btn-padding-y: .35rem;
 @btn-padding-x: .75rem;
+@btn-border-radius: .125rem;
 @btn-font-size: @font-size-base;
 @btn-font-family: @font-family-base;
 @btn-line-height: @line-height-base;
+@btn-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+@btn-box-shadow: 8px 8px 20px 0 rgb(55 99 170 / 10%), -8px -8px 20px 0 #fff, inset 0 4px 20px 0 hsl(0deg 0% 100% / 50%);
 
 // button-sm
 @btn-font-size-sm: @font-size-sm;
 @btn-line-height-sm: @line-height-sm;
 @btn-padding-x-sm: .5rem;
 @btn-padding-y-sm: .25rem;
+
 // button-lg
 @btn-padding-x-lg: 1rem;
-@btn-padding-y-lg: .625rem;
+@btn-padding-y-lg: .5rem;
 @btn-font-size-lg: @font-size-lg;
 @btn-line-height-lg: @line-height-base;
