--- a/src/style/mixin.less
+++ b/src/style/mixin.less
@@ -1,5 +1,26 @@
-.button(@padding-x, @padding-y, @font-size, @border-radius) {
+.button-size(@padding-y, @padding-x, @font-size, @border-radius, @line-height ) {
   padding: @padding-y @padding-x;
   font-size: @font-size;
   border-radius: @border-radius;
+  line-height: @line-height;
+}
+
+.button-style(@background, @border, @color, @hover-background: lighten(@background, 7.5%), @hover-border: lighten(@border, 10%), @hover-color: @color) {
+  background: @background;
+  border-color: @border;
+  color: @color;
+
+  &:hover {
+    background: @hover-background;
+    border-color: @hover-border;
+    color: @hover-color
+  }
+
+  &.focus,
+  &:focus,
+  &:active {
+    background: @hover-background;
+    border-color: @hover-border;
+    color: @hover-color
+  }
 }
