--- a/src/style/mixin.less
+++ b/src/style/mixin.less
@@ -23,4 +23,11 @@
     border-color: @hover-border;
     color: @hover-color
   }
+
+  &.disabled,
+  &:disabled {
+    background: @background;
+    border-color: @border;
+    color: @color;
+  }
 }
