--- a/src/style/var.less
+++ b/src/style/var.less
@@ -77,14 +77,14 @@
 
 // button
 @btn-font-weight: 400;
-@btn-padding-y: .35rem;
-@btn-padding-x: .75rem;
-@btn-border-radius: .125rem;
+@btn-padding-x: 1rem;
+@btn-padding-y: .25rem;
+@btn-border-radius: .25rem;
 @btn-font-size: @font-size-base;
 @btn-font-family: @font-family-base;
 @btn-line-height: @line-height-base;
 @btn-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-@btn-box-shadow: 8px 8px 20px 0 rgb(55 99 170 / 10%), -8px -8px 20px 0 #fff, inset 0 4px 20px 0 hsl(0deg 0% 100% / 50%);
+@btn-box-shadow: 0 2px #00000004;
 
 // button-sm
 @btn-font-size-sm: @font-size-sm;
@@ -93,7 +93,7 @@
 @btn-padding-y-sm: .25rem;
 
 // button-lg
-@btn-padding-x-lg: 1rem;
-@btn-padding-y-lg: .5rem;
+@btn-padding-x-lg: 1.25rem;
+@btn-padding-y-lg: .25rem;
 @btn-font-size-lg: @font-size-lg;
 @btn-line-height-lg: @line-height-base;
