--- a/src/components/Button/style.less
+++ b/src/components/Button/style.less
@@ -71,10 +71,10 @@
   .button-style(@gray-600, @gray-100, @gray-50);
 }
 
-.btn-lg {
+.btn-large {
   .button-size(@btn-padding-y-lg, @btn-padding-x-lg, @btn-font-size-lg, @btn-border-radius, @line-height-lg);
 }
 
-.btn-sm {
+.btn-small {
   .button-size(@btn-padding-y-sm, @btn-padding-x-sm, @btn-font-size-sm, @btn-border-radius, @line-height-sm);
 }
